# MutsukiDistributedHost

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  performance.yml
artifacts/: issue-19-registry-stress.json
artifacts/performance/issue-24/baseline/: content-1048576-c1-run0.json  content-1048576-c1-run1.json  content-1048576-c1-run2.json  content-536870912-c1-run0.json  content-536870912-c1-run1.json  content-536870912-c1-run2.json  content-67108864-c1-run0.json  content-67108864-c1-run1.json  content-67108864-c1-run2.json  manifest.json
artifacts/performance/issue-24/optimized/: core-report.json  cross-512m-c16-run0.json  cross-512m-c16-run1.json  cross-512m-c16-run2.json  cross-64m-c4-run0.json  cross-64m-c4-run1.json  cross-64m-c4-run2.json  normal-1m-c1-run0.json  normal-1m-c1-run1.json  normal-1m-c1-run2.json  normal-1m-c16-run0.json  normal-1m-c16-run1.json  normal-1m-c16-run2.json  normal-1m-c4-run0.json  normal-1m-c4-run1.json  normal-1m-c4-run2.json  normal-512m-c1-run0.json  normal-512m-c1-run1.json  normal-512m-c1-run2.json  normal-512m-c16-run0.json  normal-512m-c16-run1.json  normal-512m-c16-run2.json  normal-512m-c4-run0.json  normal-512m-c4-run1.json  normal-512m-c4-run2.json  normal-64m-c1-run0.json  normal-64m-c1-run1.json  normal-64m-c1-run2.json  normal-64m-c16-run0.json  normal-64m-c16-run1.json  normal-64m-c16-run2.json  normal-64m-c4-run0.json  normal-64m-c4-run1.json  normal-64m-c4-run2.json  report.json  resume50-1m-c1-run0.json  resume50-1m-c1-run1.json  resume50-1m-c1-run2.json  resume50-512m-c1-run0.json  resume50-512m-c1-run1.json  (+43 more)
artifacts/performance/reference-macos-arm64-issue23/: report-analysis.json  report.approval.json  report.json
artifacts/performance/reference-windows-x64/: report-analysis.json  report.approval.json  report.json
crates/mutsuki-distributed-benchmarks/: Cargo.toml
crates/mutsuki-distributed-benchmarks/src/: main.rs
crates/mutsuki-distributed-contracts/: Cargo.toml  build.rs
crates/mutsuki-distributed-contracts/src/: durability.rs  ha.rs  lib.rs  recovery.rs  scheduler.rs  trust.rs
crates/mutsuki-distributed-control-client/: Cargo.toml
crates/mutsuki-distributed-control-client/src/: lib.rs
crates/mutsuki-distributed-host/: Cargo.toml
crates/mutsuki-distributed-host-adapter/: Cargo.toml
crates/mutsuki-distributed-host-adapter/src/: lib.rs
crates/mutsuki-distributed-host/src/: main.rs
crates/mutsuki-distributed-runtime/: Cargo.toml
crates/mutsuki-distributed-runtime/benches/: persistent_registry_stress.rs  placement_profitability.rs
crates/mutsuki-distributed-runtime/src/: content_localization.rs  content_store.rs  durable_registry.rs  durable_tests.rs  ha_control.rs  ha_tests.rs  lib.rs  localization_io.rs  persistent_registry.rs  process.rs  recovery.rs  recovery_tests.rs  resource_catalog.rs  scheduler.rs  scheduler_tests.rs  tests.rs  trust_audit.rs  trust_plane.rs  trust_reputation.rs  trust_tests.rs
docs/: performance-model-issue22.md  phase3-architecture.md  phase4-durable-registry.md  phase5-ha-control.md  phase6-recovery.md  phase7-scheduling.md  phase8-trust-plane.md
docs/acceptance/: issue-1.md  issue-10.md  issue-12.md  issue-19.md  issue-20.md  issue-23.md  issue-24.md  issue-4.md  issue-6.md  issue-8.md
scripts/: check-boundaries.sh  run-issue24-performance.py  run-performance-model.py
