[workspace]
members = [
    "crates/mutsuki-distributed-contracts",
    "crates/mutsuki-distributed-control-client",
    "crates/mutsuki-distributed-host-adapter",
    "crates/mutsuki-distributed-runtime",
    "crates/mutsuki-distributed-host",
    "crates/mutsuki-distributed-benchmarks",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/sena-nana/MutsukiDistributedHost"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hmac = "0.12"
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }

mutsuki-runtime-contracts = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "94ba3a81d6bf4fb1263007766a64ac8be3fec1ab" }
mutsuki-link-core = { git = "https://github.com/sena-nana/MutsukiLink.git", rev = "9d671b169b9db206ebb6d8c33ab01a544f6a22b9" }
mutsuki-link = { git = "https://github.com/sena-nana/MutsukiLink.git", rev = "9d671b169b9db206ebb6d8c33ab01a544f6a22b9", features = ["local"] }
mutsuki-service-control = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "764b03ec41c9e6c02dfdfd00dd222ec5d77e13b4" }
mutsuki-service-ipc = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "764b03ec41c9e6c02dfdfd00dd222ec5d77e13b4" }

mutsuki-distributed-contracts = { path = "crates/mutsuki-distributed-contracts" }
mutsuki-distributed-control-client = { path = "crates/mutsuki-distributed-control-client" }
mutsuki-distributed-host-adapter = { path = "crates/mutsuki-distributed-host-adapter" }
mutsuki-distributed-runtime = { path = "crates/mutsuki-distributed-runtime" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
