[workspace]
members = [
    "crates/mutsuki-distributed-contracts",
    "crates/mutsuki-distributed-control-client",
    "crates/mutsuki-distributed-host-adapter",
    "crates/mutsuki-distributed-runtime",
    "crates/mutsuki-distributed-host",
    "crates/mutsuki-distributed-benchmarks",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/sena-nana/MutsukiDistributedHost"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hmac = "0.12"
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }

mutsuki-runtime-contracts = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "d4ec2e16db4a473c5fcf3f36a88e2ade09b3f695" }
mutsuki-link-core = { git = "https://github.com/sena-nana/MutsukiLink.git", rev = "9d671b169b9db206ebb6d8c33ab01a544f6a22b9" }
mutsuki-link = { git = "https://github.com/sena-nana/MutsukiLink.git", rev = "9d671b169b9db206ebb6d8c33ab01a544f6a22b9", features = ["local"] }
mutsuki-service-control = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "9fb03856c95027f849753c3b012e87a52f1598e7" }
mutsuki-service-ipc = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "9fb03856c95027f849753c3b012e87a52f1598e7" }

mutsuki-distributed-contracts = { path = "crates/mutsuki-distributed-contracts" }
mutsuki-distributed-control-client = { path = "crates/mutsuki-distributed-control-client" }
mutsuki-distributed-host-adapter = { path = "crates/mutsuki-distributed-host-adapter" }
mutsuki-distributed-runtime = { path = "crates/mutsuki-distributed-runtime" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
