[workspace]
members = [
    "crates/mutsuki-distributed-contracts",
    "crates/mutsuki-distributed-control-client",
    "crates/mutsuki-distributed-host-adapter",
    "crates/mutsuki-distributed-runtime",
    "crates/mutsuki-distributed-host",
    "crates/mutsuki-distributed-benchmarks",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/sena-nana/MutsukiDistributedHost"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hmac = "0.12"
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }

mutsuki-runtime-contracts = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "cb6139ca4e8c342551f1f929da9f243495bf09d7" }
mutsuki-link-core = { git = "https://github.com/sena-nana/MutsukiLink.git", rev = "26c66311e0e90ddb28d37e886bdda699f8662439" }
mutsuki-link = { git = "https://github.com/sena-nana/MutsukiLink.git", rev = "26c66311e0e90ddb28d37e886bdda699f8662439", features = ["local"] }
mutsuki-service-control = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "d045eb2553ed443acad5054243fbd5cd61cb80c9" }
mutsuki-service-ipc = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "d045eb2553ed443acad5054243fbd5cd61cb80c9" }

mutsuki-distributed-contracts = { path = "crates/mutsuki-distributed-contracts" }
mutsuki-distributed-control-client = { path = "crates/mutsuki-distributed-control-client" }
mutsuki-distributed-host-adapter = { path = "crates/mutsuki-distributed-host-adapter" }
mutsuki-distributed-runtime = { path = "crates/mutsuki-distributed-runtime" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
