[package]
name = "mutsuki-distributed-control-client"
description = "Authenticated capability and health client for Mutsuki Distributed Host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hmac.workspace = true
mutsuki-distributed-contracts.workspace = true
mutsuki-link.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

[lints]
workspace = true
