[package]
name = "mutsuki-distributed-host-adapter"
description = "Distribution-neutral local Host adapter used by MutsukiDistributedHost"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mutsuki-distributed-contracts.workspace = true
mutsuki-runtime-contracts.workspace = true
mutsuki-service-control.workspace = true
mutsuki-service-ipc.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
